--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@types/express": "^5.0.0",
-    "eslint": "^9.15.0",
+    "@types/express": "^4.17.21",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.12.0",
     "ts-node-dev": "^2.0.0",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.15.0"
   }
 }
