--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.21.1",
     "http-status": "^1.7.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.2"
+    "mongoose": "^8.8.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
