--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-status": "^1.7.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "zod": "^3.24.1"
   },
@@ -30,6 +31,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
